--- a/src/TapMapWeb/TapMapWeb.csproj
+++ b/src/TapMapWeb/TapMapWeb.csproj
@@ -228,15 +228,33 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Content Include="App_Data\beers.zip" />
-    <Content Include="App_Data\breweries.zip" />
-    <None Include="App_Data\LICENSE" />
-    <Content Include="App_Data\taps.zip" />
-    <Content Include="App_Data\users.zip" />
-    <None Include="App_Data\views\BeerViews.json" />
-    <None Include="App_Data\views\BreweryViews.json" />
-    <None Include="App_Data\views\TapViews.json" />
-    <None Include="App_Data\views\UserViews.json" />
+    <Content Include="App_Data\beers.zip">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="App_Data\breweries.zip">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Include="App_Data\LICENSE">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <Content Include="App_Data\taps.zip">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="App_Data\users.zip">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="App_Data\views\BeerViews.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="App_Data\views\BreweryViews.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="App_Data\views\TapViews.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="App_Data\views\UserViews.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
